I tried fixing the Issue #439 Contrast Error

--- a/_sass/bulma/css/bulma.css
+++ b/_sass/bulma/css/bulma.css
@@ -388,8 +388,8 @@ a:hover {
 }
 
 code {
-  background-color: whitesmoke;
-  color: #ff3860;
+  background-color: #1b1c1e;
+  color: whitesmoke;
   font-size: 0.875em;
   font-weight: normal;
   padding: 0.25em 0.5em 0.25em;
